--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 ---
 ---
-<h1>Quantum Threat to bitcoin</h1>
-<h2>Modeling mosca's theorem to the current trajectory of quantum computers</h2>
-<div id="myDiv">
+
+<div class="grid">
+	<div class="w12">
+		<div>WIP: Work in Progress</div>
+		<h1>Quantum Threat</h1>
+	</div>
+	<div class="w8">
+		<div id="myDiv">
+		</div>
+	</div>
+	<div class="w4">
+		<h3>Quantum Progress (yearly)</h3>
+		<form action="" class="qc_progress">
+			<h3>Increase in Qubits</h3>
+			<input type="range" name="increaseInQubits" value="25" step="25" min="25" max="200">
+
+			<h3>Algorithm Improvement</h3>
+			<input type="range" name="algorithmicImprovement" value="25" step="25" min="25" max="200">
+
+			<h3>Error Rate Improvement</h3>
+			<input type="range" name="errorRateImprovement" value="25" step="25" min="25" max="200">
+			
+			<h3>RunTime</h3>
+			<select name="runTime">
+			  <option value="24">24 hours</option>
+			  <option value="168">1 week</option>
+			  <option value="672">1 month</option>
+			  <option value="4368">6 months</option>
+			</select> 
+
+
+			<h3>Uncertainty</h3>
+			<input type="range" name="uncertainty" value="25" step="25" min="25" max="100">
+		</form>
+	</div>
+	<div class="w12">
+		
+		<h3>Mosca's Theorem</h3>
+
+
+
+	</div>
 </div>
 
 
-<h3>Quantum Progress (yearly)</h3>
-<form action="" class="qc_progress">
-<h3>Increase in Qubits</h3>
-<input type="range" name="increaseInQubits" value="25" step="25" min="25" max="200">
-
-<h3>Algorithm Improvement</h3>
-<input type="range" name="algorithmicImprovement" value="25" step="25" min="25" max="200">
-
-<h3>Error Rate Improvement</h3>
-<input type="range" name="errorRateImprovement" value="25" step="25" min="25" max="200">
-</form>
 
 <script src="/assets/main.js"></script>
