Further improvements in omnibus commit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 <div class="grid">
 	<div class="w12">
 		<div>WIP: Work in Progress</div>
-		<h1>Quantum Threat</h1>
 	</div>
 	<div class="w8">
 		<div id="myDiv">
+		</div>
+
+
+		<div class="grid">
+			<div class="w12">
+				<div class="w12">
+		
+					<h3>Mosca's Theorem</h3>
+
+
+
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="w4">
@@ -35,13 +47,7 @@
 			<input type="range" name="uncertainty" value="25" step="25" min="25" max="100">
 		</form>
 	</div>
-	<div class="w12">
-		
-		<h3>Mosca's Theorem</h3>
 
-
-
-	</div>
 </div>
 
 
