Add mosca graphic and explainer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			<div class="w12">
 				<div class="w12">
 		
-					<h3>Mosca's Theorem</h3>
-
-
+					<h3>Mosca's Theorem* </h3>
+					<img src="{{ site.baseurl }}/assets/mosca.png" alt="">
+					<p><em>* Will be able to adjust these values</em></p>
 
 				</div>
 			</div>
